third_party/move/move-compiler-v2/tests/file-format-generator/index_acquires_err.opt.exp

Diagnostics:
error: Invalid operation: storage operation on `test::Y` can only be done within module `0x42::test`
   ┌─ tests/file-format-generator/index_acquires_err.move:14:9
   │
14 │     fun test_resource_other_module() acquires 0x42::test::Y {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
15 │         let addr = @0x1;
16 │         assert!((&0x42::test::Y<0x42::test::X<bool>>[addr]).field.value == true, 1);
   │                 ------------------------------------------- storage operation here

error: Invalid operation: field access on `test::Y` can only be done within module `0x42::test`
   ┌─ tests/file-format-generator/index_acquires_err.move:14:9
   │
14 │     fun test_resource_other_module() acquires 0x42::test::Y {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
15 │         let addr = @0x1;
16 │         assert!((&0x42::test::Y<0x42::test::X<bool>>[addr]).field.value == true, 1);
   │                 ------------------------------------------------- field access here

error: Invalid operation: field access on `test::X` can only be done within module `0x42::test`
   ┌─ tests/file-format-generator/index_acquires_err.move:14:9
   │
14 │     fun test_resource_other_module() acquires 0x42::test::Y {
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^
15 │         let addr = @0x1;
16 │         assert!((&0x42::test::Y<0x42::test::X<bool>>[addr]).field.value == true, 1);
   │                 ------------------------------------------------------- field access here
